# ros2_wheelbot

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile.template  IMU_VISUALIZATION_GUIDE.md  README.md  README_MILESTONES.md  README_SETUP.md  README_SETUP_labels.md  RISK_ASSESSMENT.md  WHEELBOT_ARCHITECTURE.md  agentAItxt  comenzi  docker-compose.yml  git_push.sh  last_conversation  ros2_hoverboard.code-workspace  ros2_wheelbot.code-workspace  rosgraph.dot  structura topics
src/isaac_sim_bringup/: CMakeLists.txt  package.xml
src/isaac_sim_bringup/config/: angular_filter_scan.yaml
src/isaac_sim_bringup/isaac_description/: swerveBOT.usda  swerveBOT2.usda  swerveBOT_910.usda  swerveBOT_910_UR10.usda  swerveBOT_910_UR10_ROS.usda  swerveBOT_910x1350.usda
src/isaac_sim_bringup/isaac_description/Robotiq/2F-140/: Robotiq_2F_140_base.usd  Robotiq_2F_140_config.usd  Robotiq_2F_140_controller.usd
src/isaac_sim_bringup/isaac_description/Robotiq/2F-85/: Robotiq_2F_85_base.usd  Robotiq_2F_85_config.usd  Robotiq_2F_85_controller.usd  Robotiq_2F_85_edit.usd  Robotiq_2F_85_flattened.usd
src/isaac_sim_bringup/isaac_description/Robotiq/Hand-E/: Robotiq_Hand_E_base.usd  Robotiq_Hand_E_config.usd  Robotiq_Hand_E_edit.usd
src/isaac_sim_bringup/isaac_description/UR10/: ur10.usd  ur10e_robotiq2f-140.usd  ur10e_robotiq2f-140_ROS.usd
src/isaac_sim_bringup/isaac_description/UR10/.thumbs/: ur10.thumb.usd  ur10_long_suction.thumb.usd  ur10_short_suction.thumb.usd  ur10e_robotiq2f-140.thumb.usd
src/isaac_sim_bringup/isaac_worlds/: cilinder_garden.usda  cylinder_garden.usda  cylinder_garden2.usda  my_world.usda
src/isaac_sim_bringup/launch/: wheelbot_isaac.launch.py  wheelbot_isaac.launch_2.py  wheelbot_ur_isaac.launch.py
src/isaac_sim_bringup/src/: test_wheel_command.cpp
src/isaac_sim_bringup/tools/: isaac_launch_script_2.py  isaac_launch_script_old.py  wheelbot_script.py  wheelbot_ur_script.py
src/mobile_manipulator/bringup/: CMakeLists.txt  package.xml
src/mobile_manipulator/bringup/config/: robot_sim_controllers.yaml
src/mobile_manipulator/bringup/launch/: control_Layer_sim.launch.py  mobile_manipulator_sim.launch.py
src/mobile_robot/bringup_mobile/: CMakeLists.txt  package.xml  wheelbot_serial_hardware.xml
src/mobile_robot/bringup_mobile/config/: F710_sim.yaml  ackermannBOT_controllers.yaml  ackermann_2BOT_controllers.yaml  amr_view.rviz  angular_filter_scan.yaml  ekf_swerve_imu.yaml  joy-params.yaml  joystick.yaml  navigation_namespaced.rviz  swerveBOT_2_controllers.yaml  swerveBOT_controllers.yaml  swerveBOT_controllers_stamped.yaml  swerve_2BOT_controllers.yaml  swerve_2bot_serial_controllers.yaml  tricycleBOT_controllers.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  view.rviz
src/mobile_robot/bringup_mobile/include/bringup_mobile/: serial_hardware.hpp  serial_protocol.hpp
src/mobile_robot/bringup_mobile/launch/: ackermannBOT_launch.py  ackermann_2BOT_launch.py  control_Layer.launch.py  control_Layer.launch_2.py  control_Layer_2_launch.py  control_Layer_serial_launch.py  debug_Layer.launch.py  drive_module_launch.py  swerveBOT_launch.py  swerveBOT_sim.launch_2.py  swerve_2BOT_launch.py  swerve_2bot_serial.launch.py  teleop_Layer.launch.py  tricycleBOT_launch.py  twist_mux_launch.py
src/mobile_robot/bringup_mobile/scripts/: analyze_steering_hysteresis.py  parseRviz.py  record_rotation_test.py  rectangle_diagonals_path.py  rotation_test_server.py  start_rotation_test.py
src/mobile_robot/bringup_mobile/src/: ackermann_to_jointstate.cpp  ackermann_to_vel.cpp  example_tricycle_drive.cpp  imu_motion_visualizer.cpp  jointstate_aggregator_2.cpp  jointstate_aggregator_2_ackermann.cpp  jointstate_aggregator_2_swerve.cpp  jointstate_aggregator_4.cpp  jointstate_sim_aggregator_2.cpp  jointstate_sim_aggregator_4.cpp  jointstate_to_twist_1bot.cpp  jointstate_to_twist_2.cpp  jointstate_to_twist_2_OLD.cpp  jointstate_to_twist_2_ackermann.cpp  jointstate_to_twist_4.cpp  serial_hardware.cpp  serial_protocol.cpp  test_topic.cpp
src/mobile_robot/bringup_mobile/test/: test_active_modules_config.py  test_serial_protocol.cpp
src/mobile_robot/description_mobile/: CMakeLists.txt  package.xml
src/mobile_robot/description_mobile/launch/: view_robot_ackermann.launch.py  view_robot_ackermann_2BOT.launch.py  view_robot_swerve.launch.py  view_robot_tricycle.launch.py
src/mobile_robot/description_mobile/meshes/: base_link.stl  body_link.stl  caster_wheel_left.stl  caster_wheel_right.stl  diff_bot_body.stl  front_wheel_body.stl  front_wheel_steering.stl  front_wheel_traction.stl  left_wheel.stl  materials.xacro  right_wheel.stl
src/mobile_robot/description_mobile/ros2_control/: 4ws.ros2_control.xacro  ackermann_2bot.ros2_control.xacro  ackermannbot.ros2_control.xacro  drive_module.ros2_control.xacro  swerve.ros2_control.xacro  tricycle.ros2_control.xacro  tricyclebot.ros2_control.xacro  wheelbot_serial_swerve_2bot.ros2_control.xacro
src/mobile_robot/description_mobile/rviz/: amr_view.rviz  amr_view_robot_1.rviz
src/mobile_robot/description_mobile/urdf/mech/: base.urdf.xacro  caster_wheel.urdf.xacro  chassis.urdf.xacro  diff_drive_module.urdf.xacro  drive_module.urdf.xacro  rear_wheels.urdf.xacro  rear_wheels_mimic.urdf.xacro  serial_diff_drive_module.urdf.xacro  stand.urdf.xacro  tricycle_chassis.urdf.xacro  virtual_ackermann_2_module.urdf.xacro  (+4 more)
src/mobile_robot/navigation_ws/nav2/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/mobile_robot/wheelbot_serial_bridge/: CMakeLists.txt  package.xml  wheelbot_serial_hardware.xml
src/mobile_robot/wheelbot_serial_bridge/launch/: control_Layer_serial_launch.py  swerve_2bot_serial.launch.py
src/mobile_robot/wheelbot_serial_bridge/ros2_control/: wheelbot_serial_swerve_2bot.ros2_control.xacro
src/mobile_robot/wheelbot_serial_bridge/src/: serial_hardware.cpp  serial_protocol.cpp
src/mobile_robot/wheelbot_serial_bridge/test/: test_serial_protocol.cpp
src/mobile_robot/wheelbot_serial_bridge/urdf/: serial_diff_drive_module.urdf.xacro  swerve_2bot_serial.urdf.xacro  swerve_2bot_serial_macro.xacro
(+931 files in other folders)
