<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup_mobile</name>
  <version>0.0.1</version>
  <description>Bringup modular AMR</description>
  <maintainer email="george@holzmeister.ro">George Negret</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>twist_mux</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>topic_based_ros2_control</depend>
  <depend>bicycle_steering_controller</depend>
  <depend>geometry_msgs</depend>
  <depend>angles</depend>
  <depend>ackermann_msgs</depend>
  <depend>swerve_drive_controller</depend>
  <depend>steering_controllers_library</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
