<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup_mobile</name>
  <version>0.0.1</version>
  <description>Bringup modular AMR</description>
  <maintainer email="george@holzmeister.ro">George Negret</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>description_mobile</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>swerve_drive_controller</depend>
  <depend>twist_mux</depend>
  <depend>visualization_msgs</depend>
  <depend>xacro</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
