<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2</name>
  <version>1.0.1</version>
  <description>ROS-2 navigation packages </description>
  <maintainer email="george@wheelbot.tech">George Negret</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>navigation2</depend>
  <depend>description_mobile</depend>
  <depend>joint_state_publisher</depend>
  <depend>nav2_common</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_rviz_plugins</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>slam_toolbox</depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
